Actualizar notebook con resultados SLURM documentados

--- a/reduc-operation-alumno05.ipynb
+++ b/reduc-operation-alumno05.ipynb
@@ -51,6 +51,32 @@
     "\n",
     "print(f\"\\n \\t Computing the sum of numbers in the range [0, value): {suma}\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f6f029c-957c-4b87-87a4-9edafb647f8a",
+   "metadata": {},
+   "source": [
+    "Resultados en cola hpc-bio-mendel\n",
+    "\n",
+    "- N = 10^7  \n",
+    "  - Tiempo con `time`: 0.0518 s  \n",
+    "  - Tiempo con `%timeit`: 51.2 ms ± 1.08 ms  \n",
+    "  - Resultado de la suma: 499999500000  \n",
+    "\n",
+    "- N = 10^8  \n",
+    "  - Tiempo con `time`: 0.0528 s  \n",
+    "  - Tiempo con `%timeit`: 52.5 ms ± 1.47 ms  \n",
+    "  - Resultado de la suma: 499999500000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79e8d7a6-b916-424e-9c2e-01be1dbaa66f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
