Actualizar reduc-operation con resultados reales y script SLURM corregido

--- a/reduc-operation-alumno05.ipynb
+++ b/reduc-operation-alumno05.ipynb
@@ -18,8 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken by reduction operation: 0.036124229431152344 seconds\n",
-      "34 ms ± 840 μs per loop (mean ± std. dev. of 2 runs, 10 loops each)\n",
+      "Time taken by reduction operation: 0.040251970291137695 seconds\n",
+      "34.4 ms ± 584 μs per loop (mean ± std. dev. of 2 runs, 10 loops each)\n",
       "\n",
       " \t Computing the sum of numbers in the range [0, value): 499999500000\n",
       "\n"
@@ -72,8 +72,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "79e8d7a6-b916-424e-9c2e-01be1dbaa66f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo (lista + for): 0.06048417091369629 s\n",
+      "Tiempo (lista + sum): 0.006242513656616211 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "value = 10**6\n",
+    "lista = list(range(value))\n",
+    "\n",
+    "# lista + for\n",
+    "start = time.time()\n",
+    "suma_lista_for = 0\n",
+    "for i in lista:\n",
+    "    suma_lista_for += i\n",
+    "end = time.time()\n",
+    "print(\"Tiempo (lista + for):\", end - start, \"s\")\n",
+    "\n",
+    "# lista + sum\n",
+    "start = time.time()\n",
+    "suma_lista_sum = sum(lista)\n",
+    "end = time.time()\n",
+    "print(\"Tiempo (lista + sum):\", end - start, \"s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a433b261-6c61-4769-b4e0-4bded45035b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo (array + for): 0.12106156349182129 s\n",
+      "Tiempo (array + np.sum): 0.0004582405090332031 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "array = np.arange(value, dtype=np.int64)\n",
+    "\n",
+    "# array + for\n",
+    "start = time.time()\n",
+    "suma_array_for = 0\n",
+    "for i in array:\n",
+    "    suma_array_for += i\n",
+    "end = time.time()\n",
+    "print(\"Tiempo (array + for):\", end - start, \"s\")\n",
+    "\n",
+    "# array + np.sum\n",
+    "start = time.time()\n",
+    "suma_array_sum = np.sum(array)\n",
+    "end = time.time()\n",
+    "print(\"Tiempo (array + np.sum):\", end - start, \"s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a21d2a09-6be1-4216-8787-087d32af8ded",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo (numba njit): 5.221366882324219e-05 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numba import njit\n",
+    "\n",
+    "@njit\n",
+    "def reduc_numba(a):\n",
+    "    x = 0\n",
+    "    for i in range(a):\n",
+    "        x += i\n",
+    "    return x\n",
+    "\n",
+    "# warm-up\n",
+    "_ = reduc_numba(10)\n",
+    "\n",
+    "start = time.time()\n",
+    "suma_numba = reduc_numba(value)\n",
+    "end = time.time()\n",
+    "print(\"Tiempo (numba njit):\", end - start, \"s\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "511046fc-7708-4f9f-b187-932cfbc6145a",
+   "metadata": {},
+   "source": [
+    "Comparación de métodos (N=10^6)\n",
+    "\n",
+    "- Bucle Python → 0.040 s  \n",
+    "- Lista + for → 0.060 s  \n",
+    "- Lista + sum → 0.0062 s  \n",
+    "- Array + for → 0.121 s  \n",
+    "- Array + np.sum → 0.00046 s  \n",
+    "- Numba (njit) → 0.000052 s  \n",
+    "\n",
+    "Conclusión: sum y np.sum son mucho más rápidos que el bucle normal, y Numba es el que más acelera."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c7a954a-b9fc-4899-900e-10410925f35b",
    "metadata": {},
    "outputs": [],
    "source": []
