Añadir notebooks, script SLURM y evidencias opcionales

--- a/reduc-operation-alumno05.ipynb
+++ b/reduc-operation-alumno05.ipynb
@@ -57,17 +57,30 @@
    "id": "3f6f029c-957c-4b87-87a4-9edafb647f8a",
    "metadata": {},
    "source": [
-    "Resultados en cola hpc-bio-mendel\n",
+    "### Resultados en cola `hpc-bio-mendel` (SLURM)\n",
     "\n",
-    "- N = 10^7  \n",
-    "  - Tiempo con `time`: 0.0518 s  \n",
-    "  - Tiempo con `%timeit`: 51.2 ms ± 1.08 ms  \n",
-    "  - Resultado de la suma: 499999500000  \n",
+    "**Comandos ejecutados:**\n",
+    "```bash\n",
+    "sbatch submit_Python_hpc-bio-mendel-alumno05.sh 10000000\n",
+    "sbatch submit_Python_hpc-bio-mendel-alumno05.sh 100000000\n",
     "\n",
-    "- N = 10^8  \n",
-    "  - Tiempo con `time`: 0.0528 s  \n",
-    "  - Tiempo con `%timeit`: 52.5 ms ± 1.47 ms  \n",
-    "  - Resultado de la suma: 499999500000"
+    "Módulo cargado: anaconda/2025.06\n",
+    "Cola: hpc-bio-mendel\n",
+    "Logs: slurm-lab-python-job-12692.out, slurm-lab-python-job-12693.out\n",
+    "Tiempos y suma obtenida:\n",
+    "\n",
+    "N = 10^7\n",
+    "\n",
+    "[Python] N=10000000 sum=49999995000000 time=0.545447 s\n",
+    "[Numba ] N=10000000 sum=49999995000000 time=0.000003 s\n",
+    "%timeit: 520 ms ± 0.755 ms (2 runs)\n",
+    "\n",
+    "\n",
+    "N = 10^8\n",
+    "\n",
+    "[Python] N=100000000 sum=4999999950000000 time=5.526836 s\n",
+    "[Numba ] N=100000000 sum=4999999950000000 time=0.000019 s\n",
+    "%timeit: 5.35 s ± 0.00103 s (2 runs)"
    ]
   },
   {
