Extra: resultados Monte Carlo ր con NumPy+Numba (≥15×) y celda de conclusiones

--- a/pi-solution-alumno05.ipynb
+++ b/pi-solution-alumno05.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "62683f5e",
    "metadata": {},
    "outputs": [
@@ -39,9 +39,9 @@
       "\n",
       " \t Computing pi in serial: \n",
       "\n",
-      "\t For 1000000 trials, pi = 3.141172\n",
+      "\t For 1000000 trials, pi = 3.141372\n",
       "\n",
-      "384 ms ± 5.77 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "389 ms ± 6.29 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -74,8 +74,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "79bfdedb-4261-4cd3-b06e-b536740c0a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NumPy]  N=10000000 -> π ≈ 3.141485\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# -*- coding: utf-8 -*-\n",
+    "# Celda: Versión NumPy vectorizada del cálculo de π por Monte Carlo\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def calc_pi_numpy(N: int, seed: int = 42) -> float:\n",
+    "    rng = np.random.default_rng(seed=seed)\n",
+    "    x = rng.uniform(-1.0, 1.0, size=N)\n",
+    "    y = rng.uniform(-1.0, 1.0, size=N)\n",
+    "    inside = (x*x + y*y) < 1.0\n",
+    "    return 4.0 * inside.sum() / N\n",
+    "\n",
+    "# Prueba con N grande (ajusta si lo necesitas)\n",
+    "N_numpy = 10**7\n",
+    "pi_np = calc_pi_numpy(N_numpy, seed=42)\n",
+    "print(f\"[NumPy]  N={N_numpy} -> π ≈ {pi_np:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7bfc0182-0afd-4ba2-ac4a-21bb1e2c6a34",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "114 ms ± 88.3 μs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r 3\n",
+    "_ = calc_pi_numpy(10**7, seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "abcd865c-defe-4ff5-b097-f48f23f0ba8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Numba]  N=10000000 -> π ≈ 3.141485\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "# Celda: Numba (JIT) para contabilizar puntos\n",
+    "\n",
+    "from numba import njit\n",
+    "import numpy as np\n",
+    "\n",
+    "@njit\n",
+    "def count_inside_numba(x: np.ndarray, y: np.ndarray) -> int:\n",
+    "    M = 0\n",
+    "    for i in range(x.size):\n",
+    "        if x[i]*x[i] + y[i]*y[i] < 1.0:\n",
+    "            M += 1\n",
+    "    return M\n",
+    "\n",
+    "# Warm-up para que la compilación JIT no contamine las medidas\n",
+    "_ = count_inside_numba(np.array([0.0], dtype=np.float64),\n",
+    "                       np.array([0.0], dtype=np.float64))\n",
+    "\n",
+    "def calc_pi_numba(N: int, seed: int = 42) -> float:\n",
+    "    rng = np.random.default_rng(seed=seed)\n",
+    "    x = rng.uniform(-1.0, 1.0, size=N).astype(np.float64)\n",
+    "    y = rng.uniform(-1.0, 1.0, size=N).astype(np.float64)\n",
+    "    M = count_inside_numba(x, y)\n",
+    "    return 4.0 * M / N\n",
+    "\n",
+    "# Prueba con N grande (ajusta si lo necesitas)\n",
+    "N_numba = 10**7\n",
+    "pi_nb = calc_pi_numba(N_numba, seed=42)\n",
+    "print(f\"[Numba]  N={N_numba} -> π ≈ {pi_nb:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d6a0c150-a0f9-49ff-a9fe-5b976e5fe67a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105 ms ± 145 μs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r 3\n",
+    "_ = calc_pi_numba(10**7, seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ffa9c2d3-3414-47d7-9c91-c71e9324ae33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Timing] N=1000000\n",
+      "Serial: 0.2649 s\n",
+      "NumPy : 0.0118 s  -> Speedup vs Serial: 22.4×\n",
+      "Numba : 0.0103 s  -> Speedup vs Serial: 25.8×\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "# Celda: Cálculo de speedups vs. versión serial\n",
+    "\n",
+    "import time\n",
+    "import random\n",
+    "\n",
+    "def calc_pi_serial(N: int) -> float:\n",
+    "    M = 0\n",
+    "    for _ in range(N):\n",
+    "        x = random.uniform(-1.0, 1.0)\n",
+    "        y = random.uniform(-1.0, 1.0)\n",
+    "        if x*x + y*y < 1.0:\n",
+    "            M += 1\n",
+    "    return 4.0 * M / N\n",
+    "\n",
+    "def time_seconds(func, *args, **kwargs):\n",
+    "    t0 = time.time()\n",
+    "    _ = func(*args, **kwargs)\n",
+    "    t1 = time.time()\n",
+    "    return t1 - t0\n",
+    "\n",
+    "# Tamaño razonable para medir interactivo (y comparar)\n",
+    "N_small = 10**6\n",
+    "\n",
+    "t_serial = time_seconds(calc_pi_serial, N_small)\n",
+    "t_numpy  = time_seconds(calc_pi_numpy,  N_small, 42)\n",
+    "t_numba  = time_seconds(calc_pi_numba,  N_small, 42)\n",
+    "\n",
+    "speedup_numpy = t_serial / t_numpy if t_numpy > 0 else float('inf')\n",
+    "speedup_numba = t_serial / t_numba if t_numba > 0 else float('inf')\n",
+    "\n",
+    "print(f\"[Timing] N={N_small}\")\n",
+    "print(f\"Serial: {t_serial:.4f} s\")\n",
+    "print(f\"NumPy : {t_numpy:.4f} s  -> Speedup vs Serial: {speedup_numpy:.1f}×\")\n",
+    "print(f\"Numba : {t_numba:.4f} s  -> Speedup vs Serial: {speedup_numba:.1f}×\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a908ba5-c7ef-4976-b9e7-a9482654f886",
+   "metadata": {},
+   "source": [
+    "### Resultados (actividad extra) — Monte Carlo π\n",
+    "\n",
+    "**Versión serial (Python puro):**\n",
+    "- N = 10^6 → **0.389 s** (`%timeit`), **0.265 s** (medición simple)\n",
+    "- π ≈ 3.141372\n",
+    "\n",
+    "**NumPy vectorizado:**\n",
+    "- N = 10^7 → **0.114 s** (`%timeit`)\n",
+    "- π ≈ 3.141485\n",
+    "\n",
+    "**Numba (contabilización JIT):**\n",
+    "- N = 10^7 → **0.105 s** (`%timeit`)\n",
+    "- π ≈ 3.141485\n",
+    "\n",
+    "**Speedups (vs serial, N=10^6):**\n",
+    "- NumPy: **22.4×**\n",
+    "- Numba: **25.8×**\n",
+    "\n",
+    "**Conclusión:** Se logra una aceleración **≥ 15×** respecto a la versión serial.  \n",
+    "NumPy reduce el overhead del bucle Python mediante **vectorización** y memoria contigua; Numba compila el bucle crítico con **JIT**, logrando tiempos muy cercanos (e incluso mejores según el tamaño y el entorno). Para N grandes en nodo de cómputo, ambos métodos **superan ampliamente** el objetivo de la práctica."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d4932e7-4197-493d-a093-fa907e9eff2a",
    "metadata": {},
    "outputs": [],
    "source": []
